<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="421dp"
        android:layout_height="718dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/desc_image_header_1"
                android:src="@drawable/downloadd"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/text"
                android:textAlignment="center"/>

            <HorizontalScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/tombol1"
                        android:layout_width="170dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"
                        android:text="@string/app_name" />

                    <Button
                        android:id="@+id/tombol2"
                        android:layout_width="170dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"
                        android:text="@string/app_name" />

                </LinearLayout>
            </HorizontalScrollView>

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/desc_image_cooking"
                android:src="@drawable/tarii"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text"
                android:textAlignment="center"/>

            <HorizontalScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/button3"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_margin="10dp"
                        android:text="@string/app_name" />

                    <Button
                        android:id="@+id/button4"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_margin="10dp"
                        android:text="@string/app_name" />

                </LinearLayout>
            </HorizontalScrollView>

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/desc_image_section_3"
                android:src="@drawable/pulauu"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text"
                android:textAlignment="center"/>

            <HorizontalScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/button5"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_margin="10dp"
                        android:text="@string/app_name" />

                    <Button
                        android:id="@+id/button6"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_margin="10dp"
                        android:text="@string/app_name" />

                </LinearLayout>
            </HorizontalScrollView>

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/desc_image_footer"
                tools:srcCompat="@tools:sample/avatars" />

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/button8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Button"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="155dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:text="YOKOSO!"
        android:textSize="24dp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:gravity="center"
        android:background="@color/blue"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.096"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>